<resources>
    <string name="app_name">Cinemateca</string>
    <string name="action_settings">Settings</string>
    <string name="description_image_splash">Imagem da tela de apresentação</string>

    <string name="home_title">Cinemateca</string>
    <string name="info_title">Detalhes</string>

    <string name="searching">Carregando...</string>
    <string name="saving">Salvando...</string>
    <string name="title_activity_search">Search Activity</string>

    <string name="hint_search">Que filme você procura?</string>
    <string name="tv_movie_detailse">Detalhes do filme</string>

    <string name="tv_released">Lançamento:</string>
    <string name="tv_country_language">País/Idioma:</string>
    <string name="tv_genre">Gênero:</string>
    <string name="tv_language">Idioma:</string>
    <string name="tv_plot">Enredo:</string>
    <string name="tv_actors">Atores:</string>
    <string name="tv_director">Diretor:</string>
    <string name="tv_writer">Roterista:</string>
    <string name="tv_awards">Prêmiações:</string>

    <string name="bt_delete">Apagar</string>


    <!--Mensages alert-->
    <string name="msg_note">Aviso</string>
    <string name="msg_error_server">Falha de acesso ao servidor!</string>
    <string name="msg_et_search_empty">Por favor, entre com o nome do filme.</string>
    <string name="msg_movie_dont_found">Desculpe, filme não encontrado.</string>
    <string name="msg_no_internet">Por favor, verifique sua conexão.</string>
    <string name="msg_movie_null">Para salvar, primeiro pesquise um filme.</string>
    <string name="msg_movie_saved">salvo com sucesso!</string>
    <string name="msg_movie_dont_saved">já está salvo na Base de Dados!</string>
    <string name="msg_error_save">Erro ao salvar!</string>
    <string name="msg_error_path">Erro ao criar diretório! Tente novamente...</string>

</resources>
