<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/rl_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <FrameLayout
                android:id="@+id/fl_poster"
                android:layout_width="140dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true" >

                <ImageView
                    android:id="@+id/iv_poster_dialog"
                    android:contentDescription="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/no_poster"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/tv_title_dialog"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmallInverse" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/ll_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fl_poster"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tv_title_movie_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/gren"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/iv_poster" >

                    <TextView
                        android:id="@+id/tv_year_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:text="@string/tv_released"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_year_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_value_runtime_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_writer_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_writer"
                        android:layout_marginRight="3dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_writer_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_director_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_director"
                        android:layout_marginRight="3dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_director_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_genre_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_genre"
                        android:layout_marginRight="3dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_genre_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_awards_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_awards"
                        android:layout_marginRight="3dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_awards_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_country_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_country_language"
                        android:layout_marginRight="3dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_country_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_actors_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_actors"
                        android:layout_marginRight="3dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_actors_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_plot_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_plot"
                        android:layout_marginRight="3dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_plot_dialog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/bt_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_info"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@android:drawable/ic_delete"
                android:background="@color/blue"
                android:text="@string/bt_delete"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:padding="5dp"
                android:textSize="18sp"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
