<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.specialmovies.view.SearchActivity"
    tools:showIn="@layout/activity_search">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/rl_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="150dp"
                android:layout_height="219dp"
                android:foregroundGravity="center_horizontal"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_poster"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_marginBottom="60dp">

                <TextView
                    android:id="@+id/tv_title_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/gren"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_year_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:text="@string/tv_released"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_value_runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_writer_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_writer"
                        android:layout_marginRight="3dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_writer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_director_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_director"
                        android:layout_marginRight="3dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_director"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_genre_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_genre"
                        android:layout_marginRight="3dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_awards_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_awards"
                        android:layout_marginRight="3dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_awards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_country_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_country_language"
                        android:layout_marginRight="3dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"/>

                </LinearLayout>

                <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="horizontal">-->

                    <!--<TextView-->
                        <!--android:id="@+id/tv_language_movie"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/tv_language"-->
                        <!--android:layout_marginRight="3dp"-->
                        <!--android:textSize="13sp"-->
                        <!--android:textStyle="bold"-->
                        <!--android:textColor="@color/black"/>-->

                    <!--<TextView-->
                        <!--android:id="@+id/tv_value_language_movie"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text=""-->
                        <!--android:textSize="13sp" />-->

                <!--</LinearLayout>-->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_actors_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_actors"
                        android:layout_marginRight="3dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_actors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_plot_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_plot"
                        android:layout_marginRight="3dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_value_plot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
